src/objects/ACED_Brand_Indications__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>This is a helptext for Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Biomedicines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSO_Product_Group_Name__c</fullName>
        <label>GSO Product Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_GROUP_ID_GLBL__c</fullName>
        <label>PRODUCT_GROUP_ID_GLBL</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <inlineHelpText>This is a helptext for Therapeutic Area</inlineHelpText>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross TAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Men&apos;s Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Brand Indication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>PRODUCT_GROUP_ID_GLBL__c</columns>
        <columns>GSO_Product_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Brand</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>GSO_Product_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
        </filters>
        <label>1. Brand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2_Therapeutic_Area</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>GSO_Product_Group_Name__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Therapeutic_Area__c</field>
            <operation>equals</operation>
        </filters>
        <label>2. Therapeutic Area</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Business_Unit</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>GSO_Product_Group_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
        </filters>
        <label>3. Business Unit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Brand Indication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Indications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>